--- a/index.html
+++ b/index.html
@@ -24,12 +24,8 @@
         <p> goal:</p>
     </div>
     <div class="scoreLog">
-        <div id="win">
-            <p> Wins:</p>
-        </div>
-        <div id="lose">
-            <p> Losses:</p>
-        </div>
+        <div id="win"> Wins:</div>
+        <div id="lose">Losses:</div>
     </div>
     <div class="button">
         <button id="btn1">one</button>
@@ -61,8 +57,7 @@
         var losses = 0
         // endgoal get reset
         // var showEndGoal = endGoal
-
-
+        
         function resetGame() {
             button1 = Math.floor((Math.random() * 12) + 1);
             button2 = Math.floor((Math.random() * 12) + 1);
@@ -72,6 +67,10 @@
             accumulator = 0
             $("#endGoal").text("goal:" + endGoal)
             $("#accumulator").text("your score:" + accumulator);
+            $("#lose").text("Lose:" + losses)
+            $("#win").text("Win:" + wins)
+
+
 
             // $("#accumulator").text("your score:" + accumulator);
 
@@ -108,8 +107,6 @@
             button()
         })
 
-        $("#win").text(wins)
-        $("#lose").text(losses)
         // $("#scoreLog").(function () {
         function button() {
             if (accumulator === endGoal) {
